Osd: set osdMaxValue before osdValue

This change fixes incorrect bounded values appearing in the osd,
for example 100% when the real volume is 105%.

Probably, this happens because osdValue is set to 105 while
osdMaxValue=100, which then gets clamped by Qt.

By setting osdMaxValue first, Qt clamps with the correct range.

BUG: 475143